tests/NormalTests/paczka1/small_fuzzy/49453006.err
Error in line 1: VCiIH4Ye S616 32,4
Error in line 9: S9 A275 42,3
Error in line 10: S9 A275 56,7
Error in line 13: S9 A571 80,5
Error in line 16: S9 A275 96,7
